testando metodo que remove todos os numeros negativos de uma lista